Fix class applying visibility:hidden breaking error box

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,6 +30,10 @@ body {
   visibility: hidden;
 }
 
+.no-display {
+  display: none;
+}
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
